fix spacing of buttons

--- a/src/app/components/pick-team/pick-team.component.scss
+++ b/src/app/components/pick-team/pick-team.component.scss
@@ -17,7 +17,8 @@
 }
 .button-row button,
 .button-row a {
-  margin-right: 8px;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 
 .spinner {
